# robbit

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  compose.yaml
src/: lib.rs  main.rs  module.rs
src/module/: bully.rs  config.toml  lenny.rs
src/modules/: bonk.rs  bully.rs  grass.rs  help.rs  history.rs  join_rude.rs  kick.rs  lenny.rs  mod.rs  noemo.rs  repo.rs  rtfm.rs  time_to_date.rs  ttb.rs
