[package]
name = "robbit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

irc = {version = "1.0.0", default-features = false, features = ["tls-rust", "ctcp", "channel-lists","toml_config"]}
chrono = {version = "*"}
futures = {version = "*"}
tokio = {version = "*", features = ["full"]}
regex = "1"
rand = "0.8.5"
